[package]
name = "wirewhale"
version = "0.0.9"
edition = "2021"
authors = ["gawetto"]
license = "MIT"
description = """
wirewhale is tui viewer for pcap format data.
"""
repository = "https://github.com/gawetto/wirewhale"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = { version = "0.25", features = ["event-stream"]}
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.4"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
futures = "0.3"
thiserror = "1.0.24"
anyhow = { version = "1.0.65", features = ["backtrace"] }
clap = {version="4.0.11", features=["derive"]}
byteorder = "1.4.3"
async-std = {version="1.12.0", features= ["attributes","unstable"]}
chrono = "0.4.23"
